--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,12 +97,12 @@ uuid = { version = "1", features = ["v4", "serde"] }
 dirs = "5.0"
 reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
 
-# llama.cpp bindings (optional) - using forked version with macOS ARM64 i8mm fix
+# llama.cpp bindings (optional) - using forked version with Windows MSVC CUDA + macOS ARM64 fixes
 llama-cpp-2 = { version = "0.1.118", optional = true, default-features = false }
 
-# Use forked llama-cpp-2 with macOS ARM64 i8mm compatibility fix
+# Use forked llama-cpp-2 with Windows MSVC CUDA stdbool.h + macOS ARM64 i8mm compatibility fixes
 [patch.crates-io]
-llama-cpp-2 = { git = "https://github.com/Michael-A-Kuykendall/llama-cpp-rs.git", branch = "fix-macos-arm64-i8mm", package = "llama-cpp-2" }
+llama-cpp-2 = { git = "https://github.com/Michael-A-Kuykendall/llama-cpp-rs.git", branch = "fix-windows-msvc-cuda-stdbool", package = "llama-cpp-2" }
 
 [dev-dependencies]
 tokio-tungstenite = "0.20"
