feat: Add MoE CPU offloading support (--cpu-moe, --n-cpu-moe)
- Add global CLI flags: --cpu-moe and --n-cpu-moe N
- Integrate MoE configuration through engine adapter
- Use local llama-cpp-rs fork with MoE support (feat/moe-cpu-offload branch)
- Fix ANSI color output (respects NO_COLOR and TERM env vars)

This enables running large MoE models like GPT-OSS 20B on consumer GPUs
by offloading expert tensors to CPU memory, reducing VRAM requirements.

Related: Issue #81, llama-cpp-rs PR pending

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,8 +101,9 @@ reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-feature
 llama-cpp-2 = { version = "0.1.118", optional = true, default-features = false }
 
 # Use forked llama-cpp-2 with Windows MSVC CUDA stdbool.h + macOS ARM64 i8mm compatibility fixes
+# TESTING: Using local path for MoE CPU offloading feature development
 [patch.crates-io]
-llama-cpp-2 = { git = "https://github.com/Michael-A-Kuykendall/llama-cpp-rs.git", branch = "fix-windows-msvc-cuda-stdbool", package = "llama-cpp-2" }
+llama-cpp-2 = { path = "../llama-cpp-rs/llama-cpp-2" }
 
 [dev-dependencies]
 tokio-tungstenite = "0.20"
