feat(tests): comprehensive regression test infrastructure with CI/CD integration
- Organized 20+ regression test files into tests/regression/ directory
- Each test file covers specific GitHub issues to prevent regressions
- Created tests/regression.rs to include all organized test modules
- Added automated test runner: scripts/run-regression-tests-auto.sh
- Updated .github/workflows/ci.yml to run regression tests before main suite
- Fixed .gitignore: **/target/ pattern + console/ directory exclusion
- Moved old scattered test files into organized structure (git detected renames)
- 82 regression tests now auto-discovered and run in CI/CD

**Zero Tolerance Policy**: All regression tests MUST pass before PR/release.

Tests cover Issues: #12, #13, #51, #53, #63, #64, #68, #72, #101, #106, #108,
#110, #111, #112, #113, #114, #127, #128 + general packaging/versioning

**Testing:**
- cargo test --test regression --features llama: 82 passed
- CI/CD integration: Runs automatically on every PR
- Release gates: Blocks releases if any regression fails

Signed-off-by: Michael A. Kuykendall <michaelallenkuykendall@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Rust build artifacts
-/target/
+**/target/
 /alt_target/
 /target-minimal/
 **/*.rs.bk
@@ -96,3 +96,6 @@ json
 shimmy
 shimmy.exe
 .claude/settings.local.json
+
+# Console subproject (development/experimental)
+console/
