--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,11 +44,45 @@ jobs:
         fi
       continue-on-error: true
 
+  # Regression Test Suite (CRITICAL - User-reported bugs)
+  regression-tests:
+    name: Regression Tests (Zero Tolerance)
+    runs-on: ubuntu-latest
+    needs: ppt-contracts  # PPT contracts must pass first
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install Rust
+      uses: dtolnay/rust-toolchain@stable
+
+    - name: Cache dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          target
+        key: ${{ runner.os }}-regression-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+    - name: Run Automated Regression Tests
+      run: |
+        echo "🧪 Running Regression Tests - Preventing Previously Fixed Bugs"
+        chmod +x ./scripts/run-regression-tests-auto.sh
+        ./scripts/run-regression-tests-auto.sh
+
+    - name: Upload Regression Test Logs on Failure
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: regression-test-logs
+        path: "*.log"
+        retention-days: 7
+
   # Comprehensive Test Suite
   test:
     name: Test Suite
     runs-on: ubuntu-latest
-    needs: ppt-contracts  # PPT contracts must pass first
+    needs: [ppt-contracts, regression-tests]  # Both PPT and regressions must pass first
     steps:
     - uses: actions/checkout@v4
 
