--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,45 +44,11 @@ jobs:
         fi
       continue-on-error: true
 
-  # Regression Test Suite (CRITICAL - User-reported bugs)
-  regression-tests:
-    name: Regression Tests (Zero Tolerance)
-    runs-on: ubuntu-latest
-    needs: ppt-contracts  # PPT contracts must pass first
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
-
-    - name: Cache dependencies
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-regression-cargo-${{ hashFiles('**/Cargo.lock') }}
-
-    - name: Run Automated Regression Tests
-      run: |
-        echo "🧪 Running Regression Tests - Preventing Previously Fixed Bugs"
-        chmod +x ./scripts/run-regression-tests-auto.sh
-        ./scripts/run-regression-tests-auto.sh
-
-    - name: Upload Regression Test Logs on Failure
-      if: failure()
-      uses: actions/upload-artifact@v4
-      with:
-        name: regression-test-logs
-        path: "*.log"
-        retention-days: 7
-
-  # Comprehensive Test Suite
+  # Comprehensive Test Suite (includes regression tests)
   test:
     name: Test Suite
     runs-on: ubuntu-latest
-    needs: [ppt-contracts, regression-tests]  # Both PPT and regressions must pass first
+    needs: ppt-contracts  # PPT contracts must pass first
     steps:
     - uses: actions/checkout@v4
 
@@ -128,6 +94,13 @@ jobs:
       run: |
         echo "Running Unit Tests - All Features"
         timeout 900s cargo test --lib --all-features --verbose
+
+    - name: Run Regression Tests
+      if: steps.check-skip-tests.outputs.skip-tests != 'true'
+      run: |
+        echo "🧪 Running Regression Tests - User-reported bug prevention"
+        timeout 900s cargo test --test regression --features llama --verbose
+        timeout 900s cargo test --test regression_tests --no-default-features --features huggingface --verbose
 
     - name: Report test status
       run: |
