--- a/.github/workflows/mlx-apple-silicon.yml
+++ b/.github/workflows/mlx-apple-silicon.yml
@@ -1,10 +1,13 @@
 name: MLX Apple Silicon Testing
 
+# TEMPORARILY DISABLED: Replacing MLX with new library
+# Will re-enable after new library integration is complete
 on:
-  push:
-    branches: [ main, 'feature/mlx*', 'issue-100-*' ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:  # Manual trigger only
+  # push:
+  #   branches: [ main, 'feature/mlx*', 'issue-100-*' ]
+  # pull_request:
+  #   branches: [ main ]
 
 jobs:
   mlx-test:
