fix(release): auto-update Cargo.lock to prevent crates.io failures
CRITICAL FIX - Prevents recurring release blocker:
- Added pre-commit hook to auto-update Cargo.lock when Cargo.toml changes
- Added pre-flight check to dry-run-release.sh to catch uncommitted Cargo.lock
- Committed current Cargo.lock with version 1.7.4

This has killed multiple release attempts. Never again.

Signed-off-by: Michael A. Kuykendall <michaelallenkuykendall@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,14 @@ repos:
         language: system
         types: [rust]
         pass_filenames: false
+      
+      # HOOK 4: Update Cargo.lock after version changes (prevents release failures)
+      - id: cargo-lock-update
+        name: Update Cargo.lock
+        entry: bash -c 'if git diff --cached --name-only | grep -q "Cargo.toml"; then cargo generate-lockfile; git add Cargo.lock 2>/dev/null || true; fi'
+        language: system
+        pass_filenames: false
+        always_run: true
 
 # NOTE: Regression tests (115 tests, ~60-100s) are NOT run on every commit
 # They run automatically on:
