--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shimmy"
-version = "1.8.2"
+version = "1.8.1"
 edition = "2021"
 license = "MIT"
 description = "Lightweight sub-5MB Ollama alternative with native SafeTensors support. No Python dependencies, 2x faster loading. Now with GitHub Spec-Kit integration for systematic development."
@@ -36,21 +36,25 @@ full = ["huggingface", "llama", "mlx"] # Full compilation - includes all backend
 gpu = ["huggingface", "llama-cuda", "llama-vulkan", "llama-opencl"] # GPU-optimized build
 apple = ["huggingface", "mlx"] # Apple Silicon optimized - MLX + HuggingFace
 coverage = ["huggingface"] # Coverage testing - minimal deps for faster builds
+vision = ["dep:image", "dep:base64"] # Optional vision feature for image/web analysis
 
 [dependencies]
 anyhow = "1"
 axum = { version = "0.7", features = ["http1","json","ws"] }
 async-trait = "0.1"
+base64 = { version = "0.21", optional = true }
 bytes = "1"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
 futures-util = "0.3"
+image = { version = "0.24", optional = true }
 lazy_static = "1.5"
 memmap2 = "0.9"
 minijinja = { version = "2", features = ["loader"] }
 parking_lot = "0.12"
 rand = "0.8"
 regex = "1"
+reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
 safetensors = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -64,7 +68,6 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 dirs = "5.0"
-reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
 
 # llama.cpp bindings (optional) - published shimmy-llama-cpp-2 with MoE CPU offloading support
 shimmy-llama-cpp-2 = { version = "0.1.123", optional = true, default-features = false }
