--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,27 @@ docs-internal/
 *.log
 *.db
 *.db-*
+test-screenshots/
+test_image.b64
+
+# Build outputs
+out/
+output.md
+
+# Internal development
+docs/internal/
+memory/
+secret-scan/
+
+# Vision development (temporary - move to branch)
+shimmy-vision-console-update/
+src/bin/vision_preprocess_dump.rs
+
+# Third-party repos
+llama-cpp-minicpm/
+
+# AI instructions
+.github/instructions/
 
 # Package manager artifacts
 node_modules/
