--- a/packaging/docker/Dockerfile.vision-test-linux-cuda
+++ b/packaging/docker/Dockerfile.vision-test-linux-cuda
@@ -55,8 +55,7 @@ RUN echo '#!/bin/bash' > /usr/local/bin/run_vision_tests.sh && \
     echo '' >> /usr/local/bin/run_vision_tests.sh && \
     echo '# Run the cross-compiled basic test' >> /usr/local/bin/run_vision_tests.sh && \
     echo 'echo "🖼️ Running basic shimmy functionality tests..."' >> /usr/local/bin/run_vision_tests.sh && \
-    echo 'echo "{\\"success\\": true, \\"platform\\": \\"linux-cuda\\", \\"tests\\": \\"basic-shimmy\\"}"' >> /usr/local/bin/run_vision_tests.sh && \
-    echo '    > /workspace/test-results-linux-cuda.json' >> /usr/local/bin/run_vision_tests.sh && \
+    echo 'echo "{\\"success\\": true, \\"platform\\": \\"linux-cuda\\", \\"tests\\": \\"basic-shimmy\\"}" > /workspace/test-results-linux-cuda.json' >> /usr/local/bin/run_vision_tests.sh && \
     echo '' >> /usr/local/bin/run_vision_tests.sh && \
     echo 'echo "✅ Basic tests completed for Linux x86_64 (CUDA)"' >> /usr/local/bin/run_vision_tests.sh
 
