--- a/.github/workflows/vision-cross-platform-test.yml
+++ b/.github/workflows/vision-cross-platform-test.yml
@@ -33,6 +33,8 @@ jobs:
   build-linux-x86_64:
     if: github.event_name != 'workflow_dispatch' || contains(github.event.inputs.test_platforms || 'linux-x86_64', 'linux-x86_64')
     runs-on: ubuntu-latest
+    env:
+      CARGO_NET_GIT_FETCH_WITH_CLI: true
     steps:
       - uses: actions/checkout@v4
 
@@ -79,6 +81,8 @@ jobs:
   build-linux-arm64:
     if: github.event_name != 'workflow_dispatch' || contains(github.event.inputs.test_platforms || 'linux-arm64', 'linux-arm64')
     runs-on: ubuntu-latest
+    env:
+      CARGO_NET_GIT_FETCH_WITH_CLI: true
     steps:
       - uses: actions/checkout@v4
 
@@ -114,6 +118,8 @@ jobs:
   build-windows-x86_64:
     if: github.event_name != 'workflow_dispatch' || contains(github.event.inputs.test_platforms || 'windows-x86_64', 'windows-x86_64')
     runs-on: windows-latest
+    env:
+      CARGO_NET_GIT_FETCH_WITH_CLI: true
     steps:
       - uses: actions/checkout@v4
 
@@ -154,6 +160,8 @@ jobs:
   build-macos-arm64:
     if: ${{ !inputs.skip_macos && (github.event_name != 'workflow_dispatch' || contains(github.event.inputs.test_platforms || '', 'macos-arm64')) }}
     runs-on: macos-latest
+    env:
+      CARGO_NET_GIT_FETCH_WITH_CLI: true
     steps:
       - uses: actions/checkout@v4
 
