--- a/deny.toml
+++ b/deny.toml
@@ -68,10 +68,9 @@ feature-depth = 1
 # A list of advisory IDs to ignore. Note that ignored advisories will still
 # output a note when they are encountered.
 ignore = [
-    #"RUSTSEC-0000-0000",
-    #{ id = "RUSTSEC-0000-0000", reason = "you can specify a reason the advisory is ignored" },
-    #"a-crate-that-is-yanked@0.1.1", # you can also ignore yanked crate versions if you wish
-    #{ crate = "a-crate-that-is-yanked@0.1.1", reason = "you can specify why you are ignoring the yanked crate" },
+    # rustls-pemfile unmaintained - transitive dependency through reqwest 0.11.x
+    # We'll update when reqwest 0.12.x is stable and all our dependencies support it
+    { id = "RUSTSEC-2025-0134", reason = "Transitive dep from reqwest 0.11.x - waiting for ecosystem to migrate to reqwest 0.12" },
 ]
 # If this is true, then cargo deny will use the git executable to fetch advisory database.
 # If this is false, then it uses a built-in git library.
