chore: reorganize documentation structure
- Move internal strategy docs to docs/internal/
- Move audit reports to docs/audits/
- Move release-specific docs to docs/releases/
- Move GitHub-specific docs to .github/internal/
- Move technical whitepapers to docs/
- Delete temporary files (temp_frontmatter.txt, test_simple.rs)
- Update .gitignore for internal documentation patterns
- Add V1.9.0_RELEASE_CHECKLIST.md

Root directory now has only essential public-facing docs:
- README.md, CHANGELOG.md, CONTRIBUTING.md
- CODE_OF_CONDUCT.md, DCO.md, GOVERNANCE.md
- DEVELOPERS.md, SECURITY.md, SPONSORS.md
- RELEASE_GATES_CHECKLIST.md, RELEASE_PROCESS.md
- ROADMAP.md, README-DOCKER.md

--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,20 @@ Thumbs.db
 
 # Internal development documents (NEVER commit)
 docs-internal/
+docs/internal/
+.github/internal/
 
 # Internal workspace docs (NEVER commit)
 .internal/
+
+# Temporary and local-only files
+temp_*.txt
+temp_*.md
+*_temp.md
+*_temp.txt
+*-LOCAL.md
+*-PRIVATE.md
+*.local.md
 
 # Copilot instructions (internal only)
 .github/copilot-instructions.md
